// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Editor Page snapshots props besides blockType default to null 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(Symbol.observable): [Function],
    }
  }
>
  <ErrorBoundary
    learningContextId={null}
    studioEndpointUrl={null}
  >
    <Editor
      blockId={null}
      blockType="html"
      learningContextId={null}
      lmsEndpointUrl={null}
      onClose={null}
      studioEndpointUrl={null}
    />
  </ErrorBoundary>
</Provider>
`;

exports[`Editor Page snapshots rendering correctly with expected Input 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(Symbol.observable): [Function],
    }
  }
>
  <ErrorBoundary
    learningContextId="course-v1:edX+DemoX+Demo_Course"
    studioEndpointUrl="fakeurl.com"
  >
    <Editor
      blockId="block-v1:edX+DemoX+Demo_Course+type@html+block@030e35c4756a4ddc8d40b95fbbfff4d4"
      blockType="html"
      learningContextId="course-v1:edX+DemoX+Demo_Course"
      lmsEndpointUrl="evenfakerurl.com"
      onClose={[MockFunction props.onClose]}
      studioEndpointUrl="fakeurl.com"
    />
  </ErrorBoundary>
</Provider>
`;
